# Cpp-Neural-Network

./: CMakeLists.txt  README.md
src/: main.cpp  runAi.cpp  trainAi.cpp
src/game/: GameHandler.cpp  GameHandler.h
src/game/ai/: Ai.cpp  Ai.h  Inputs.cpp  Inputs.h
src/game/ai/neuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
src/game/ai/neuralNetwork/layer/: Layer.cpp  Layer.h
src/game/ai/neuralNetwork/nodes/: Node.cpp  Node.h
src/game/frame/: Frame.cpp  Frame.h
src/game/player/: Player.cpp  Player.h
src/game/window/: Window.cpp  Window.h
